--- a/index.html
+++ b/index.html
@@ -5,5 +5,27 @@
   <meta http-equiv="refresh" content="0; url=build/">
 </head>
 <body>
+<!-- 🔒 Domain protection -->
+  <script>
+  (function () {
+    const allowedDomains = [
+      "bulofkgames.blogspot.com",
+      "thebulofkproject.blogspot.com",
+      "github.io"
+    ];
+
+    const OFFICIAL_SITE = "https://bulofkgames.blogspot.com/";
+    const ref = document.referrer.toLowerCase();
+
+    if (!ref) return;
+
+    const allowed = allowedDomains.some(domain => ref.includes(domain));
+
+    if (!allowed) {
+      window.location.replace(OFFICIAL_SITE);
+    }
+  })();
+  </script>
+
 </body>
 </html>
